feat: improve error handing

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL=postgres://root:root@localhost:5432/posts?sslmode=disable
+APP_BUN_POSTGRES_DSN=postgres://root:root@localhost:5432/posts?sslmode=disable
 APP_SERVICE_LISTEN_ADDRESS=localhost:3500
+APP_BUN_DEBUG=2
